Finish refactoring graphs docs

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -92,7 +92,7 @@ There are two display modes for query plans. You can switch between **Show plan 
 
 ## Subscription support
 
-> Note that supergraphs do _not_ currently support subscription operations. You can only execute subscriptions in the Explorer with a monolith [classic graph](../org/graphs/#classic-graphs).
+> Note that supergraphs do _not_ currently support subscription operations. You can only execute subscriptions in the Explorer with a [monograph](../org/graphs/#monographs).
 
 The Explorer supports the following libraries/protocols for sending subscription operations over WebSocket:
 
