--- a/src/content/studio/explorer/operation-collections.mdx
+++ b/src/content/studio/explorer/operation-collections.mdx
@@ -95,7 +95,7 @@ You can also give authorized team members a link directly to a particular shared
 
 ### Embedding in the README page
 
-Each graph variant in Studio has a [README page](../org/graphs/#the-readme-page) that you can customize to document that variant. You can embed a variant's shared collections and operations in its README using [shortcodes](../org/graphs/#readme-shortcodes) that are shown in the README editor.
+Each graph variant in Studio has a [README page](../studio-graph-features/#the-readme-page) that you can customize to document that variant. You can embed a variant's shared collections and operations in its README using [shortcodes](../studio-graph-features/#readme-shortcodes) that are shown in the README editor.
 
 ### Public collections
 
