--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -2,7 +2,7 @@
 title: Supergraph-specific Studio features
 ---
 
-A **supergraph** (also known as a [federated graph](https://apollographql.com/docs/federation) is a graph that's composed of one or more **subgraphs**:
+A **supergraph** (also known as a [federated graph](/federation/)) is a graph that's composed of one or more **subgraphs**:
 
 ```mermaid
 graph BT;
