--- a/src/content/studio/schema/cli-registration.mdx
+++ b/src/content/studio/schema/cli-registration.mdx
@@ -122,6 +122,6 @@ jobs:
 
 ## Monolith schemas
 
-> ⚠️ These instructions apply only to monolith [classic graphs](../org/graphs/#classic-graphs), which are **not recommended**.
+> ⚠️ These instructions apply only to [monographs](../org/graphs/#monographs), which are **not recommended**.
 
 <RegisterCli />
