--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -209,8 +209,8 @@ We'll cover some of these pages in later steps, but feel free to click around an
 
 | Page | Description |
 |------|-------------|
-| **README** | Displays the variant's editable Markdown-formatted README, along with other important details about the variant (such as its graph ref and router URL). [Learn more](./org/graphs#the-readme-page) |
-| **Schema** | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more](./org/graphs#the-schema-page) |
+| **README** | Displays the variant's editable Markdown-formatted README, along with other important details about the variant (such as its graph ref and router URL). [Learn more](./studio-graph-features/#the-readme-page) |
+| **Schema** | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more](./studio-graph-features/#the-schema-page) |
 | **Explorer** | A powerful IDE for building and executing operations against your supergraph. [Learn more](./explorer/explorer) |
 | **Subgraphs** | Displays the details for each separate GraphQL API that's part of your supergraph. (Each API is called a **subgraph**.) [Learn more](./cloud-routing/overview) |
 | **Changelog** | Displays a historical diff of additions, modifications, and deletions made to your supergraph's schema. |
