--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -180,7 +180,7 @@ Additionally, a graph router provides more functionality than just support for m
 
 **To create a cloud supergraph,** see the [quickstart](../getting-started/).
 
-**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see the instructions for your plan type:
+**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see the instructions for your organization's plan type:
 
 <ExpansionPanel title="Serverless plans">
 
@@ -192,7 +192,7 @@ Additionally, a graph router provides more functionality than just support for m
           src="../img/studio-welcome.jpg"
           class="screenshot"
           alt="Welcome message for new Studio orgs"
-          width="400"
+          width="350"
         />
 
         ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
@@ -233,7 +233,7 @@ Additionally, a graph router provides more functionality than just support for m
      width="500"
     />
 
-5. **If you're using Apollo Federation,** select the version of federation you're using from the **Supergraph Pipeline Track** dropdown.
+5. **If you're creating a self-hosted supergraph,** select the version of Apollo Federation you're using from the **Supergraph Pipeline Track** dropdown.
 
 Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
 
@@ -245,7 +245,40 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
 <ExpansionPanel title="Enterprise and legacy plans">
 
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
+2. Click **New Graph** in the top right. Studio displays the following dialog:
+
+    <img
+      className="screenshot"
+      src="../img/graph-creation.jpg"
+      width="350"
+      style="margin-bottom: 20px;"
+    />
+
+3. Specify an organization and title for your graph.
+
+4. Specify your **Graph Architecture**:
+
+    * To create a self-hosted supergraph, leave this as **Supergraph (default)**.
+    * To create a monograph, switch this to **Monolith**.
+
+5. Click **Next**. A dialog like the following appears (the details differ depending on which **Graph Architecture** you're using):
+
+    <img
+     src="../img/register-schema-dialog.jpg"
+     class="screenshot"
+     alt="Schema registration options"
+     width="500"
+    />
+
+6. **If you're creating a self-hosted supergraph,** select the version of Apollo Federation you're using from the **Supergraph Pipeline Track** dropdown.
+
+Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
+
+> Note that the **Supergraphs** tab is only for _cloud_ supergraphs. Your self-hosted supergraphs are under the **Classic Graphs** tab.
+
+Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
 
 </ExpansionPanel>
 
