--- a/src/content/studio/schema-checks.mdx
+++ b/src/content/studio/schema-checks.mdx
@@ -45,7 +45,7 @@ To enable schema checks for your supergraph, do the following if you haven't yet
 
 Let's say you've made local changes to one of your subgraph schemas. After you [complete the prerequisites](#prerequisites), you can run schema checks against those changes with the `rover subgraph check` command.
 
-> If you have a monolith [classic graph](./org/graphs/#classic-graphs) (not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands. 
+> If you have a [monograph](./org/graphs/#monographs) (not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands.
 
 The `rover subgraph check` command looks like this:
 
