--- a/src/content/studio/studio-graph-features.mdx
+++ b/src/content/studio/studio-graph-features.mdx
@@ -1,12 +1,14 @@
 ---
-title: Studio graph features
+title: Managing graphs in Apollo Studio
 ---
+
+This article describes Apollo Studio features for all [graph types](./org/graphs/#graph-types). For features specific to supergraphs, see also [Supergraph-specific Studio features](./federated-graphs/).
 
 ## Viewing graph details
 
 After selecting an organization in Apollo Studio, click on a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
 
-> Enterprise accounts can set [member roles](./members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
+> Enterprise accounts can set [member roles](./org/members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
 
 ### The README page
 
@@ -15,15 +17,15 @@ When a user opens one of your graph's variants in Apollo Studio, its **README pa
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="../img/readme-example.jpg"
+  src="./img/readme-example.jpg"
   width="500"
 />
 
 Like the typical homepage for a Git repository, this page displays a Markdown-based README that you can edit with any content you like.
 
-> **Note:** Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](./members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributor**s _cannot_ edit its README.
+> **Note:** Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](./org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributor**s _cannot_ edit its README.
 
-**Each variant has its own README.** If you edit one variant's README, those edits are _not_ applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](../graph-access-permissions/#public-variants).
+**Each variant has its own README.** If you edit one variant's README, those edits are _not_ applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](#public-variants).
 
 #### Supported Markdown
 
@@ -45,7 +47,7 @@ This renders the code block with buttons you can use to copy an operation or ope
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="../img/readme-codeblock.jpg"
+  src="./img/readme-codeblock.jpg"
   width="300"
 />
 
@@ -72,7 +74,7 @@ Apollo Studio provides helpful views for exploring your registered schema:
 
 Apollo Studio provides a powerful **Explorer** IDE that helps you visualize your graph and run queries against it. It's available from your graph's Explorer tab in Studio.
 
-> [Learn about the Explorer.](../explorer/explorer/)
+> [Learn about the Explorer.](./explorer/explorer/)
 
 #### The Schema page
 
@@ -81,7 +83,7 @@ The Schema page lists the different kinds of definitions in your schema (objects
 <img
   className="screenshot"
   alt="Schema page list of type definitions in Studio"
-  src="../img/schema-page-list.jpg"
+  src="./img/schema-page-list.jpg"
   width="300"
 />
 
@@ -90,7 +92,7 @@ Select a kind of definition to view a table of all corresponding types:
 <img
   className="screenshot"
   alt="Schema page list of type definitions in Studio"
-  src="../img/schema-page-table.jpg"
+  src="./img/schema-page-table.jpg"
 />
 
 Each type definition in the table includes:
@@ -108,7 +110,7 @@ The top of the Schema page provides a **Filter Schema** box you can use to find 
 <img
   className="screenshot"
   alt="Schema page filter box and dropdowns"
-  src="../img/schema-page-filters.jpg"
+  src="./img/schema-page-filters.jpg"
   width="600"
 />
 
@@ -239,13 +241,79 @@ Include results that take a GraphQL argument with any of the the specified names
 The Changelog page in Studio displays a timeline of changes made to your graph's schema:
 
 <img
-  src="../img/changelog-page.jpg"
+  src="./img/changelog-page.jpg"
   className="screenshot"
   alt="Schema Changelog tab"
   width="450"
 />
 
-**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../schema/cli-registration/#publishing-with-continuous-delivery).
+**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](./schema/cli-registration/#publishing-with-continuous-delivery).
+
+## Managing access permissions
+
+### Public variants
+
+You can enable public access for individual variants of your graph. If you do, **anyone with that variant's public link** can view the following pages for that variant in Studio:
+
+- Home
+  - This shows the variant's README.
+- Schema
+- Explorer
+  - You can also [embed the Explorer](./explorer/embed-explorer/) on your own webpage.
+
+This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
+
+People outside your organization can't view any _other_ pages for a public variant (Fields, Operations, etc.), and they can never view _any_ pages for private variants. New variants always start as private.
+
+#### Making a variant public
+
+> Only organization members with the [**Org Admin** or **Graph Admin** role](./org/members/) can toggle a variant's public visibility.
+
+1. Go to your variant's Settings page and open the **This Variant** tab.
+2. Find the Public card and click **Change**:
+
+   <img
+     class="screenshot"
+     src="./img/toggle-public-protected-variant.png"
+     alt="Toggle public variant in Studio"
+     width="400"
+   />
+
+3. Toggle your selection and click **Save**.
+
+You can toggle the switch back to **Off** to make the variant private again.
+
+After you make a variant public, you can click the variant's **PUBLIC** label at the top of Apollo Studio to get its public link:
+
+<img
+  className="screenshot"
+  src="./img/public-variant-label.jpg"
+  alt="Public variant label in Studio"
+  width="400"
+/>
+
+### Protected variants (Enterprise only)
+
+If you have an Enterprise plan, you can designate particular variants of a graph as **protected variants**. Making a variant protected specifically affects the ability of users with the [**Contributor** role](./org/members/#organization-wide-member-roles) to make certain changes to the variant:
+
+- **Contributor**s _cannot_ push schema updates to a protected variant.
+- **Contributor**s _cannot_ manage Explorer-related settings for a protected variant, like setting its URL.
+- Graph API Keys with the **Contributor** permission _cannot_ report usage metrics to your graph.
+
+These are the only operations (other than creating new protected variants and creating new graphs) that can be performed by **Contributor**s and not by **Observer**s, so one way of thinking of protected variants are that they are variants where **Contributor**s are treated as **Observer**s.
+
+**Graph Admin**s and **Org Admin**s can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
+
+### Internal graph visibility (Enterprise only)
+
+> For _external_ graph visibility, see [Public variants](#public-variants).
+
+By default, graphs are visible to all members of your organization. If you have an Enterprise plan, you can set a graph to instead be visible only to members you invite.
+
+You can configure visibility and grant your organization's members explicit access to your graph from the Access tab of your graph's Settings page.
+
+Note that **Org Admin**s can always see _all_ graphs in your organization.
+
 
 ## Graph administration
 
@@ -258,7 +326,7 @@ by visiting the graph's Settings page and changing the **graph owner**.
 
 > ⚠️ **Deleting a graph cannot be undone!**
 >
-> If you delete a cloud supergraph, all of its GraphOS-managed routers are **deprovisioned**.
+> If you delete a cloud supergraph, all of its GraphOS-hosted routers are **deprovisioned**.
 
 You can delete a graph from Studio by visiting its Settings page and clicking
 **Delete Graph**.
