Have graph creation in every reasonable article

--- a/src/content/studio/studio-graph-features.mdx
+++ b/src/content/studio/studio-graph-features.mdx
@@ -4,6 +4,12 @@ title: Managing graphs in Apollo Studio
 
 This article describes Apollo Studio features for all [graph types](./org/graphs/#graph-types). For features specific to supergraphs, see also [Supergraph-specific Studio features](./federated-graphs/).
 
+## Creating graphs
+
+**To create a cloud supergraph,** see the [GraphOS quickstart](./getting-started/).
+
+**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see [this section](./org/graphs/#creating-graphs).
+
 ## Viewing graph details
 
 After selecting an organization in Apollo Studio, click on a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
