--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -178,9 +178,9 @@ Additionally, a graph router provides more functionality than just support for m
 
 ## Creating graphs
 
-**To create a cloud supergraph,** see the [quickstart](../getting-started/).
+**To create a cloud supergraph,** see the [GraphOS quickstart](../getting-started/).
 
-**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see the instructions for your organization's plan type:
+**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see the instructions for your organization's [plan type](./plans/):
 
 <ExpansionPanel title="Serverless plans">
 
