Fix broken links

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -128,7 +128,7 @@ You can click the `X` next to `Listening` to stop listening for updates (the upd
 
 ## Embedding
 
-If you've enabled [public access to a variant of your graph](../graph-access-permissions/#public-variants), you can embed the Explorer in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
+If you've enabled [public access to a variant of your graph](../studio-graph-features/#public-variants), you can embed the Explorer in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
 
 See [Embedding the Explorer](./embed-explorer).
 
