--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -200,7 +200,7 @@ The URL of the GraphQL endpoint that Sandbox introspects on initial load. Sandbo
 The default value is `http://localhost:4000`.
 
 **You should only pass non-production endpoints to Sandbox**. Sandbox is powered by schema introspection, and we recommend [disabling introspection in production](https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/).
-To provide a "Sandbox-like" experience for production endpoints, we recommend using either a [public variant](../graph-access-permissions/#public-variants) or the [embedded Explorer](./embed-explorer).
+To provide a "Sandbox-like" experience for production endpoints, we recommend using either a [public variant](../studio-graph-features/#public-variants) or the [embedded Explorer](./embed-explorer).
 
 </td>
 </tr>
