Tweak some links

--- a/src/content/studio/metrics/operation-signatures.mdx
+++ b/src/content/studio/metrics/operation-signatures.mdx
@@ -49,9 +49,8 @@ Helpfully, Apollo libraries use a [signature algorithm](#signature-algorithm) to
 
 > ⚠️ **This algorithm is subject to change.** This article describes the signature algorithm as of the release of Apollo Server 3.6.1. It is provided here for informational purposes, not as a canonical specification.
 
-<!-- TODO(AS4) update link below once this is on the main branch-->
-
-Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-server/blob/main/packages/apollo-server-core/src/plugin/usageReporting/defaultUsageReportingSignature.ts).
+<!-- TODO(AS4) Update this link once GA -->
+Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-server/blob/version-4/packages/server/src/plugin/usageReporting).
 
 The signature algorithm performs the following modifications on an operation to generate its signature:
 
