Apply suggestions from code review
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -152,7 +152,7 @@ If you are looking at your data [in the table layout](#table-layout-for-response
 
 > Enable **Inlined traces** from the Explorer's Settings tab.
 
-If you're using Apollo Server 2.18+, you can see traces from your responses inlined in the Explorer by adding the `ApolloServerPluginInlineTrace` plugin to your server's configuration:
+If you're using Apollo Server, you can see traces from your responses inlined in the Explorer by adding the `ApolloServerPluginInlineTrace` plugin to your server's configuration:
 
 ```ts
 import {ApolloServerPluginInlineTrace} from '@apollo/server/plugin/inlineTrace';
