Update import and code snippets to use top level await

--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -29,8 +29,11 @@ Overload protection packages are available for most popular languages and server
 To use `overload-protection`, you include it in your Express startup like so:
 
 ```js
-const app = require('express')();
-const protect = require('overload-protection')('express');
+import express from 'express';
+import protect from 'overload-protection';
+
+const app = express();
+protect('express');
 app.use(protect);
 ```
 
@@ -38,8 +41,19 @@ app.use(protect);
 
 If you're using `@apollo/server`'s Express integration (i.e.[`expressMiddleware`](/apollo-server/api/express-middleware)), you can add `overload-protection` via Express middleware by adding the highlighted lines to your server creation:
 
-```js
-const protect = require('overload-protection')('express'); // highlight-line
+```js title="index.js"
+import {ApolloServer} from '@apollo/server';
+import {expressMiddleware} from '@apollo/server/express4';
+import {ApolloServerPluginDrainHttpServer} from '@apollo/server/plugin/drainHttpServer';
+import express from 'express';
+import http from 'http';
+import cors from 'cors';
+import bodyParser from 'body-parser';
+import {typeDefs, resolvers} from './schema';
+// highlight-start
+import protect from 'overload-protection';
+protect('express');
+// highlight-end
 
 async function startApolloServer(typeDefs, resolvers) {
   const app = express();
@@ -48,19 +62,17 @@ async function startApolloServer(typeDefs, resolvers) {
   const server = new ApolloServer({
     typeDefs,
     resolvers,
-    plugins: [ApolloServerPluginDrainHttpServer({ httpServer })],
+    plugins: [ApolloServerPluginDrainHttpServer({httpServer})]
   });
 
   await server.start();
-  app.use('/graphql',
-    cors<cors.CorsRequest>(),
-    json(),
-    expressMiddleware(server)
-  ),
+  app.use('/graphql', cors(), bodyParser.json(), expressMiddleware(server));
 
-  await new Promise((resolve) => httpServer.listen({ port: 4000 }, resolve));
+  await new Promise(resolve => httpServer.listen({port: 4000}, resolve));
   console.log(`🚀 Server ready at http://localhost:4000/graphql`);
 }
+// Note the top-level await here!
+await startApolloServer(typeDefs, resolvers);
 ```
 
 This approach also works if you're using the `@apollo/subgraph` library to create your subgraphs in a similar way.
