--- a/src/content/technotes/TN0006-unmanaged-federation.mdx
+++ b/src/content/technotes/TN0006-unmanaged-federation.mdx
@@ -67,12 +67,12 @@ services:
 After you make the schema file available to your gateway instances, pass a function to the `supergraphSdl` option of your `ApolloGateway` constructor that enables the gateway to hot reload the schema. The example function below uses the `chokidar` library to watch for file updates:
 
 ```js
-const { ApolloServer } = require('@apollo/server');
-const { startStandaloneServer } = require('@apollo/server/standalone');
-const { ApolloGateway } = require('@apollo/gateway');
-const { readFile } = require('fs/promises');
-const chokidar = require('chokidar');
-const supergraphSdlLocation = '/etc/config/supergraph.graphql';
+import { ApolloServer } from '@apollo/server';
+import { startStandaloneServer } from '@apollo/server/standalone';
+import { ApolloGateway } from '@apollo/gateway';
+import { readFile } from 'fs/promises';
+import chokidar from 'chokidar';
+import supergraphSdlLocation = '/etc/config/supergraph.graphql';
 
 async function startApolloGateway() {
   const gateway = new ApolloGateway({
@@ -106,6 +106,8 @@ async function startApolloGateway() {
   const { url } = await startStandaloneServer(server);
   console.log(`🚀  Server ready at ${url}`);
 }
+
+await startApolloGateway();
 ```
 
 In the code above, the `ApolloGateway` is passed a `supergaphSdl` property. This property can be a string (for a supergraph schema that _never_ changes during runtime), or it can be a function that enables updating the schema during runtime as shown.  
